--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -50,3 +50,15 @@ button.primary:disabled {
   background-color: hsla(160, 100%, 37%, 0.2);
   color: #666;
 }
+
+div.pill {
+  background: rgba(0, 132, 189, 0.3);
+  padding: 0.5rem;
+  margin: 0.5rem;
+  border-radius: 5px;
+  text-align: center;
+  text-transform: uppercase;
+  width: 100%;
+  display: inline-block;
+  cursor: pointer;
+}
